# EPSS-Splunk-TA

./: .gitignore  README.md  docker-compose.test.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
TA-epss/: app.manifest
TA-epss/README/: inputs.conf.spec
TA-epss/default/: app.conf  collections.conf  eventtypes.conf  inputs.conf  macros.conf  props.conf  savedsearches.conf  tags.conf  transforms.conf
TA-epss/default/data/ui/nav/: default.xml
TA-epss/default/data/ui/views/: epss_health.xml  epss_overview.xml
TA-epss/lookups/: epss_daily_summary.csv
docs/superpowers/plans/: 2026-04-23-epss-splunk-ta.md
docs/superpowers/specs/: 2026-04-23-epss-splunk-ta-design.md
scripts/: build.sh  screenshots.py  vendor.sh
tests/: conftest.py
tests/fixtures/: epss_sample.csv  epss_sample_old_tz.csv
tests/unit/: test_checkpoint.py  test_csv_processor.py  test_epss_client.py  test_epss_input.py
