[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TA-epss"
version = "1.0.0"
description = "Splunk Technology Add-on for EPSS score ingestion"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Jerry Gamblin"}]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "ruff>=0.4.0",
    "mypy>=1.8",
    "requests-mock>=1.11",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring Docker Splunk (deselect with '-m not integration')",
]
